test/src/e2e_vm_tests/test_programs/should_pass/static_analysis/cei_pattern_violation_english_auction/src/data_structures/traits.sw
library traits;

pub trait Asset {
    fn amount(self) -> u64;
    fn asset_id(self) -> ContractId;
}
